FIX Removed spacing from auto-vertical layouts

--- a/source/selectors/_layout.scss
+++ b/source/selectors/_layout.scss
@@ -268,6 +268,18 @@ layout,
                 @include auto-sizing;
             }
         }
-    }
 
+        &[orientation="auto-vertical"],
+        &.layout-auto-vertical {
+            &[spaced],
+            [spaced],
+            &.layout-spaced,
+            .layout-spaced {
+                > * {
+                    padding-left: 0;
+                    padding-right: 0;
+                }
+            }
+        }
+    }
 }
